Issue #15: Adjusted header menu so that items are aligned to the right.

--- a/themes/custom/nickelback/css/global.css
+++ b/themes/custom/nickelback/css/global.css
@@ -15,12 +15,14 @@
   background-color: #C4C4C4;
   color: #000;
   padding: 10px;
-
+  flex-grow:1;
 }
+
 
 .menu--main ul{
   display:flex;
   flex-direction:row;
+  justify-content: flex-end;
 }
 
 .block-system-branding-block{
